--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-pandas
-joblib
-lime
-scikit-learn
-matplotlib
+import streamlit as st
+import pandas as pd
+import joblib
+from lime.lime_tabular import LimeTabularExplainer
+import numpy as np
+from sklearn.preprocessing import RobustScaler
+import matplotlib.pyplot as plt
