--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 streamlit==1.39.0
-pandas==1.5.3
-joblib==1.2.0
+pandas==2.2.2
+joblib==1.4.2
 lime==0.2.0.1
-numpy==1.24.3
-scikit-learn==1.2.2
-matplotlib==3.7.1
-openpyxl==3.1.2
-scipy==1.10.1
-setuptools>=65.5.1
-wheel
+numpy==1.26.4
+scikit-learn==1.5.1
+matplotlib==3.9.2
+openpyxl==3.1.5
+scipy==1.14.1
+setuptools == 65.5.0
+wheel == 0.44.0
